syntax = "proto3";
package agent;
option go_package = ".;agentgrpc";

service CommandAPI {
  rpc GetCommand(CommandRequest) returns (Command);
  rpc CommandExecutionResult(CommandResult) returns (CommandResultAck);
}

message CommandRequest {
  string AgentName = 1;
  int32 CommandType = 3;
}

message Command {
  string CommandName = 1;
  string Command = 2;
  repeated string Args = 3;
}

message CommandResult {
  string CommandName = 1;
  string AgentName = 2;
  int32 CommandType = 3;
  int32 CommandResult = 4;
}

message CommandResultAck {
  string CommandName = 1;
  bool Accepted = 2;
  bool Retry = 3;
}